class ProductFactory {

  public static createProducts (order: Object): Array<Product> {
    let products = []
    return products
  }
}