class RequestHandler {

  public static requestOrders():Array<Object> {
    let orders = []
    return orders
  }

}